# to-advent-of-code

./: LICENSE  README.md  clear-inputs.sh  copy-inputs.sh
2021/: settings.gradle.kts
2021/app/: build.gradle.kts
2021/app/src/main/kotlin/net/sympower/aok2021/tonis/: Day01.kt  Day02.kt  Day03.kt  Day04.kt  Day05.kt  Day06.kt  Day07.kt  Utils.kt
2021/app/src/test/kotlin/net/sympower/aok2021/tonis/: Day02Test.kt  Day03Test.kt  Day04Test.kt  Day05Test.kt  Day06Test.kt  Day07Test.kt
2022/: Cargo.toml  README.md  new-day.sh
2022/src/: main.rs
2022/src/day00/: mod.rs
2022/src/day01/: mod.rs
2022/src/day02/: mod.rs
2022/src/day03/: mod.rs
2022/src/day04/: mod.rs
2022/src/day05/: mod.rs
2022/src/day06/: mod.rs
2022/src/day07/: mod.rs
2022/src/day08/: mod.rs
2022/src/day09/: mod.rs
2022/src/day10/: mod.rs
2022/src/day11/: mod.rs  monkey.rs
2022/src/day12/: mod.rs
2022/src/day13/: mod.rs
2022/src/day14/: mod.rs
2022/src/day15/: mod.rs
2022/src/day16/: mod.rs
2022/src/day17/: mod.rs
2022/src/day18/: mod.rs
2022/src/day19/: mod.rs
2023/: Cargo.toml  README.md  new-day.sh
2023/src/: common.rs  day00.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day18.rs  day19.rs  main.rs
2025/: mix.exs
2025/lib/: aoc2025.ex  day03.ex  day04.ex  day06.ex  day09.ex
2025/lib/aoc2025/: day01.ex  day02.ex  day03.ex  day04.ex  day05.ex  day06.ex  day07.ex  day08.ex
