[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
num-bigint = "0.4.3"
grid = "0.9.0"
serde_json = "1.0.89"
regex = "1.7.0"

[[bin]]
edition = "2021"
name = "aoc-2022"
path = "src/main.rs"
