[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"
authors = ["Tõnis Ojandu <tonis.ojandu@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
lazy_static = "1.4.0"

[[bin]]
edition = "2021"
name = "aoc-2023"
path = "src/main.rs"
